Installation de codeMirror et des fichiers js et css. Premières fonctions pour l'édition et la vue.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,9 @@ body {
   background-color: teal; }
 
 /*# sourceMappingURL=style.css.map */
+#textArea {
+	float: left;
+}
+#markdownArea {
+	float: right;
+}
